# bandgaps

./: .gitignore  LICENSE  README.md  Taskfile.yml  environment.yml  pyproject.toml  xschemrc
.devcontainer/: devcontainer.json  environment.yml  setup
bandgap_sky130_v1/: library.toml
bandgaps/bandgap_gf180mcu_v01/: .designinit
bandgaps/bandgap_sky130_v1/: .designinit
bandgaps/bandgap_sky130_v1/bandgap_1v_v01/: bandgap_1v_v01.sch
bandgaps/test_benches/: dc_op_testbench.py
scripts/: netlist  setup
tests/dc_op/: dc_op.test.toml  dc_op_testbench.py  test_op_point.py
tests/dc_op/netlist/: bandgap_1v_v01_dcop_testbench.spice
tests/dc_op/simulation/: bandgap_1v_v01_dcop_testbench.out  bandgap_1v_v01_dcop_testbench.raw
tests/dc_op_hdl21/: conditions.csv  dc_op_test.py  dc_op_testbench.py  specifications.csv
tests/dc_op_hdl21/netlist/: bandgap_1v_v01.lib  bandgap_1v_v01.spice
tests/tran/: specifications.csv  test_transient.py  tsmc_bandgap_real_tran.sch
