[project]
name = "bandgaps"
version = "0.1.0"
authors = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
   {name="Yulin Deng"},
   {name="Thomas Pluck"},
]
readme = "README.md"
license = {file="LICENSE"}
description = "A set of open-source bandgap circuits"
keywords = ["hardware", "analog"]
requires-python = ">=3.8"
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Home" = "https://github.com/cascode-labs/bandgaps"
"Documentation" = "https://github.com/cascode-labs/bandgaps"
"Source" = "https://github.com/cascode-labs/bandgaps"

[tools.viper.libraries.bandgap_sky130_v1]
path = "bandgap_sky130_v1"
process = "sky130A"

